# RAG-app

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/13177320-24cd-461b-93f8-3ad22b316860/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/a30d8901-b1c6-4b07-9db8-e7f61f61024d/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/ce1c2f49-7bb9-4bb1-be5b-31c86383a1c4/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/ce1c2f49-7bb9-4bb1-be5b-31c86383a1c4/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/cea168e0-00dc-4549-a396-44b440a35e70/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/cea168e0-00dc-4549-a396-44b440a35e70/payload_index/: IDENTITY  LOG  MANIFEST-000005
